<resources>
    <string name="app_name">CodeKK</string>
    <string name="navigation_tips">暂未开放</string>

    <string name="op_title">开源项目</string>
    <string name="opa_title">源码解析</string>
    <string name="job_title">职位内推</string>
    <string name="blog_title">博客文章</string>
    <string name="notes_title">个人笔记(暂未开放)</string>
    <string name="recommend_title">今日推荐</string>
    <string name="common_title">公共功能(暂未开放)</string>
    <string name="setting_title">设置</string>

    <string name="browser_title">Browser</string>
    <string name="refresh_title">Refresh</string>

    <string name="search_title">search</string>
    <string name="search_dialog_title">请输入关键词</string>
    <string name="search_op_hint">search title,tags,author,keywords…</string>
    <string name="search_opa_hint">author name</string>
    <string name="search_recommend_hint">author name</string>

    <string name="net_error">网络连接失败,点击重试</string>
    <string name="net_loading">loading…</string>
    <string name="data_empty">没有数据了</string>
    <string name="exit_app">再按一次退出</string>
    <string name="empty_view_tips">数据为空,点击重试</string>
    <string name="pact_title">开放源代码许可</string>

    <string name="xadapter">XAdapter</string>
    <string name="rxnetwork">rxNetWork</string>
    <string name="leakcanary">leakcanary</string>
    <string name="materialdialog">material-dialogs</string>
    <string name="butterknife">butterknife</string>
    <string name="flexbox">flexbox</string>
    <string name="markdownView">MarkdownView</string>
    <string name="rxJava">RxJava</string>
    <string name="retrofit">Retrofit2</string>
    <string name="backlayout">BackLayout</string>
</resources>
